seccion de recomendacionesw

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     />
     <link rel="stylesheet" href="./public/vendor/vendor.css" />
     <link rel="stylesheet" href="./public/styles/index.css" />
+    <link rel="icon" href="./public/assets/images/zorro.png" />
     <title>Proyecto Flexbox</title>
   </head>
   <body>
@@ -23,7 +24,7 @@
             class="nav__logo"
           />
           <ul class="nav__list">
-            <li class="nav__item">Recomendaciones y Favoritos</li>
+            <li class="nav__item">Recomendaciones</li>
             <li class="nav__item">Eventos</li>
             <li class="nav__item">Suscribete</li>
             <li class="nav__item">Contactos</li>
@@ -48,6 +49,59 @@
         </div>
         <div class="header__footer">Tu lista de Peliculas, México</div>
       </header>
+      <main class="content">
+        <h2 class="content__title">Recomendaciones</h2>
+        <p class="content__subtitle">Los preferidos de Siempre</p>
+        <div class="content__cards">
+          <div class="cards">
+            <img
+              src="./public/assets/images/poster 1 .webp"
+              alt=""
+              class="cards__img"
+            />
+            <h3 class="cards__title">El viaje de Chihiro</h3>
+            <p class="cards__text">
+              Una obra maestra animada que combina fantasía, emoción y mundos
+              inolvidables.
+            </p>
+          </div>
+          <div class="cards">
+            <img
+              src="./public/assets/images/poster 2 .webp"
+              alt=""
+              class="cards__img"
+            />
+            <h3 class="cards__title">Interstellar</h3>
+            <p class="cards__text">
+              Una exploración visual y emocional sobre el tiempo, la esperanza y
+              el futuro de la humanidad.
+            </p>
+          </div>
+          <div class="cards">
+            <img
+              src="./public/assets/images/poster 3 .webp"
+              alt=""
+              class="cards__img"
+            />
+            <h3 class="cards__title">Perdida (Gone Girl)</h3>
+            <p class="cards__text">
+              Un thriller psicológico que te mantiene cuestionándolo todo hasta
+              el último minuto.
+            </p>
+          </div>
+          <div class="cards">
+            <img
+              src="./public/assets/images/poster 4 .webp"
+              alt=""
+              class="cards__img"
+            />
+            <h3 class="cards__title">The Dark Knight</h3>
+            <p class="cards__text">
+              Acción, drama y uno de los mejores villanos del cine moderno.
+            </p>
+          </div>
+        </div>
+      </main>
     </div>
   </body>
 </html>
