estructura 3ra seccion

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+
     <link rel="stylesheet" href="./public/vendor/vendor.css" />
     <link rel="stylesheet" href="./public/styles/index.css" />
     <link rel="icon" href="./public/assets/images/zorro.png" />
@@ -49,7 +50,7 @@
         </div>
         <div class="header__footer">Tu lista de Peliculas, México</div>
       </header>
-      <main class="content">
+      <section class="content">
         <h2 class="content__title">Recomendaciones</h2>
         <p class="content__subtitle">Los preferidos de Siempre</p>
         <div class="content__cards">
@@ -101,7 +102,36 @@
             </p>
           </div>
         </div>
-      </main>
+      </section>
+      <section class="events">
+        <div class="events__content">
+          <h2 class="events__heading">Proximos eventos:</h2>
+          <h3 class="events__title">
+            Especial Wes Anderson: simetría, color y mundos peculiares
+          </h3>
+        </div>
+        <div class="event__info">
+          <div class="event__info-item">
+            <span class="material-symbols-outlined"> calendar_clock </span>
+            <p class="event__info-text">Viernes 23 de febrero</p>
+          </div>
+          <div class="event__info-item">
+            <span class="material-symbols-outlined"> location_on </span>
+            <p class="event__info-text">
+              Sala principal de Tu lista de Peliculas y transmisión en línea
+            </p>
+          </div>
+        </div>
+        <p class="events__description">
+          Un recorrido visual por el estilo inconfundible de Wes Anderson.
+          Exploraremos su paleta pastel, la composición perfectamente simétrica,
+          la narrativa excéntrica y la forma en que construye universos que
+          parecen salidos de un cuento ilustrado. A través de escenas
+          emblemáticas y análisis guiado, descubriremos por qué su cine es
+          considerado una obra artesanal moderna.
+        </p>
+        <a href="#" class="events__more">Más eventos &rarr;</a>
+      </section>
     </div>
   </body>
 </html>
