cambios en eventos

--- a/index.html
+++ b/index.html
@@ -109,28 +109,34 @@
           <h3 class="events__title">
             Especial Wes Anderson: simetría, color y mundos peculiares
           </h3>
-        </div>
-        <div class="event__info">
-          <div class="event__info-item">
-            <span class="material-symbols-outlined"> calendar_clock </span>
-            <p class="event__info-text">Viernes 23 de febrero</p>
+          <div class="event__info">
+            <div class="event__info-item">
+              <span class="material-symbols-outlined"> calendar_clock </span>
+              <p class="event__info-text">Viernes 23 de febrero</p>
+            </div>
+            <div class="event__info-item">
+              <span class="material-symbols-outlined"> location_on </span>
+              <p class="event__info-text">
+                Sala principal de Tu lista de Peliculas y transmisión en línea
+              </p>
+            </div>
           </div>
-          <div class="event__info-item">
-            <span class="material-symbols-outlined"> location_on </span>
-            <p class="event__info-text">
-              Sala principal de Tu lista de Peliculas y transmisión en línea
-            </p>
-          </div>
+          <p class="events__description">
+            Un recorrido visual por el estilo inconfundible de Wes Anderson.
+            Exploraremos su paleta pastel, la composición perfectamente
+            simétrica, la narrativa excéntrica y la forma en que construye
+            universos que parecen salidos de un cuento ilustrado. A través de
+            escenas emblemáticas y análisis guiado, descubriremos por qué su
+            cine es considerado una obra artesanal moderna.
+          </p>
+          <a href="#" class="events__more">Más eventos &rarr;</a>
         </div>
-        <p class="events__description">
-          Un recorrido visual por el estilo inconfundible de Wes Anderson.
-          Exploraremos su paleta pastel, la composición perfectamente simétrica,
-          la narrativa excéntrica y la forma en que construye universos que
-          parecen salidos de un cuento ilustrado. A través de escenas
-          emblemáticas y análisis guiado, descubriremos por qué su cine es
-          considerado una obra artesanal moderna.
-        </p>
-        <a href="#" class="events__more">Más eventos &rarr;</a>
+
+        <img
+          src="./public/assets/images/40618405_0-removebg-preview.png"
+          alt=""
+          class="events__img"
+        />
       </section>
     </div>
   </body>
