--- a/index.html
+++ b/index.html
@@ -137,6 +137,25 @@
           alt=""
           class="events__img"
         />
+        <img
+          src="./public/assets/images/Screenshot 2025-12-10 at 10.58.26 p.m..png"
+          alt=""
+          class="events__img-1"
+        />
+        <img
+          src="./public/assets/images/Screenshot 2025-12-10 at 10.58.32 p.m..png"
+          alt=""
+          class="events__img-2"
+        /><img
+          src="./public/assets/images/Screenshot 2025-12-10 at 10.58.39 p.m..png"
+          alt=""
+          class="events__img-3"
+        />
+        <img
+          src="./public/assets/images/Screenshot 2025-12-10 at 10.58.46 p.m..png"
+          alt=""
+          class="events__img-4"
+        />
       </section>
     </div>
   </body>
