cambio en footer

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         </div>
 
         <div class="footer__copyright">
-          © 2025 CineVerse. Todos los derechos reservados.
+          © 2025 Tu lista de peliculas. Todos los derechos reservados.
         </div>
       </footer>
     </div>
