--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </li>
             <li class="nav__item"><a href="#events">Eventos </a></li>
             <li class="nav__item"><a href="#sucribe">Únete</a></li>
-            <li class="nav__item">Contactos</li>
+            <li class="nav__item"><a href="#contacto">Contacto</a></li>
           </ul>
         </nav>
         <div class="header__content">
@@ -205,7 +205,7 @@
           </div>
         </div>
       </section>
-      <footer class="footer">
+      <footer class="footer" id="#contacto">
         <div class="footer__colums">
           <div class="footer__column">
             <img
